<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.amidst</groupId>
    <artifactId>code-examples</artifactId>
    <version>0.5.0</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <!-- AMIDST repository in github -->
        <repository>
            <id>amidstRepo</id>
            <url>https://raw.github.com/amidst/toolbox/mvn-repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Load any of the modules from AMIDST Toolbox -->
        <dependency>
            <groupId>eu.amidst</groupId>
            <artifactId>latent-variable-models</artifactId>
            <version>0.5.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.hugin</groupId>
            <artifactId>hugin</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/hgapi83_amidst-64.jar</systemPath>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>compile</scope>
        </dependency>

        <!-- ... -->
    </dependencies>
</project>